# GreyThink

./: .gitattributes  .gitignore  03-JAVA  Basic_Gender_Bias_Remover.ipynb  CLI_Line_Count.sh  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Code of conduct  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  count-lines.ps1
01-Python/Grey Math/: .gitignore  README.md  pyproject.toml  pytest.ini
01-Python/Grey Math/docs/: architecture.md
01-Python/Grey Math/examples/: dynamical_systems.py  llm_integration.py  spectral_analysis.py  symbolic_computation.py
01-Python/Grey Math/greymath/: __init__.py  __main__.py
01-Python/Grey Math/installers/: README.md  build.sh
01-Python/Grey Math/tests/: test_core.py  test_experimental.py  test_numeric.py  test_symbolic.py  test_systems.py  test_verification.py
01-Python/Grey Optimizer/backend/: README.md  pyproject.toml  requirements.txt  setup.py
01-Python/Grey Physics/grey-physics/: .gitignore  LICENSE  README.md  pyproject.toml
01-Python/GreyAV/: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  attack_graph.py  auto_threat_manager.py  av_immune_system.py  behavioral_engine.py  chaos_immunization_layer.py  cognitive_threat_twin.py  collective_mesh.py  deception_engine.py  deception_manager.py  docker-compose.yml  energy_defense.py  exclusions.json  greyav.py  install_av.sh  integrity.json  main.py  mesh_node.py  neural_adaptation.py  policy_orchestrator.py  port_manager.py  process_lineage.py  pyproject.toml  replay_engine.py  requirements.txt  resilience_manager.py  semantic_reasoner.py  signatures.json  socket_intake.py  threat_dna.py  threat_dreamscape_engine.py  threat_economy.py  threat_knowledge_graph.py  threat_sandbox.py  (+3 more)
01-Python/GreyAV/k8s/: configmap.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  rbac.yaml  service.yaml
01-Python/GreyAV/quarantine/: .qkey
01-Python/GreyAV/tests/: conftest.py  pytest.ini  test_scanner.py
01-Python/graph_snake/: .dockerignore  Dockerfile  LICENSE  README.md  check_licenses.py  docker-compose.yml  graph_plotter.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
01-Python/graph_snake/k8s/: configmap.yaml  deployment.yaml  job.yaml  kustomization.yaml  service.yaml
01-Python/graph_snake/tests/: test_parse.py  test_render.py
01-Python/green_linux/: .dockerignore  .gitignore  .vscode-ctags  CHANGELOG-UNRELEASED.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  EXPORT_PREVIEW_FIX.md  GUI_ISSUES_RESOLVED.md  Makefile  POSTPONEMENT_SUGGESTIONS_FIX.md  PR_DRAFT.md  TIMEZONE_FIX_SUMMARY.md  TIMEZONE_SETUP_FIX.md  add_sample_tasks.py  check_timezone_setup.py  debug_export_preview.py  debug_history.py  diagnose_gui_full.py  diagnose_power_sampling.py  docker-compose.yml  enable_mock_power.py  launch_gui_debug.sh  postponement-suggestions.csv  pyproject.toml  requirements-dev.txt  restart_powerapp.sh  run_gui_with_mock_power.sh  test_env_gui.py  test_first_launch.sh  test_first_launch_gui.sh  test_gui_export_simulation.py  test_gui_startup.py  test_shortcuts_dialog.py  test_timezone_display.py  test_timezone_export_manual.py  verify_export_timezone.py
01-Python/green_linux/datasets/: windows.npz
01-Python/green_linux/docs/: HELP.md  PRIVACY.md  QUANTIZATION.md  TRANSLATION.md  bug_report_upload.md  design-on-device-ml-per-app-estimation.md  rfc-ml-power-estimation.md
01-Python/green_linux/flatpak/: org.example.powerapp.json
01-Python/green_linux/k8s/: configmap.yaml  deployment.yaml  kustomization.yaml  service.yaml
01-Python/green_linux/locale/: powerapp.pot
01-Python/green_linux/models/: window_predictor.joblib  window_predictor.onnx  window_predictor.opsetfixed.onnx  window_predictor.opsetfixed.quant.onnx  window_predictor_small.fp16.onnx  window_predictor_small.joblib  window_predictor_small.onnx  window_predictor_small.opsetfixed.onnx  window_predictor_small.opsetfixed.quant.onnx  window_predictor_small_compressed.joblib
01-Python/green_linux/powerapp/: __init__.py  calendar.py  config.py  emissions.py  i18n.py  telemetry.py
01-Python/green_linux/scripts/: compare_pngs.py  compare_visual_meta.py  convert_to_fp16.py  convert_to_onnx.py  evaluate_model.py  fix_onnx_opset.py  generate_dataset.py  generate_explainability_demo_gif.py  generate_golden_simulator_image.py  generate_icon_png.py  generate_pot.py  install_desktop.sh  powerapp.desktop  quantize_static.py  run_gui.sh  train.py  uninstall_desktop.sh  verify_quantized_model.py
01-Python/green_linux/snap/: snapcraft.yaml
01-Python/green_linux/tests/: conftest.py  test_apply_helper.py  test_augment_suggestions.py  test_augment_with_model.py  test_bugreport_anonymizer.py  test_bugreport_server_integration.py  test_bugreport_upload_opt_in.py  test_calendar.py  (+81 more)
04-C/Grey Firmware/: .gitignore  CMakeLists.txt  Makefile  README.md
05-C++/Grey Runtime/: .gitignore  CMakeLists.txt  DOCS.md  README.md
09-Rust/: Cargo.toml  README.md  THIRD-PARTY-NOTICES.md
09-Rust/Grey Distributed/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.cli  Makefile  README.md  docker-compose.yml  go.mod
09-Rust/Linux Equalizer/: .dockerignore  .gitignore  AUTOSTART.md  CODE-INVESTIGATION-REPORT.md  CRITICAL_FIXES.md  Cargo.toml  DEVICE-SWITCHING-FIX.md  Dockerfile  FIXES.md  INSPECTION_REPORT.md  QUICK-START.md  QUICKREF.md  README.md  REFACTOR-SUMMARY.md  SETUP.md  TESTING-GUIDE.md  USAGE.md  USAGE_GUIDE.md  VIRTUAL_DEVICE_INFO.md  VOLUME-FIX.md  audio-test.sh  debug-audio-flow.sh  docker-compose.yml  first-time-setup.sh  install-desktop.sh  install-service.sh  linux-equalizer.desktop  linux-equalizer.service  restore-audio.sh  setup-audio.sh  test-audio-complete.sh  test-audio.sh  test-device-switching.sh  test-eq-audio.sh  test-eq-processing.rs  test-eq.sh  test-routing.sh  uninstall-service.sh
09-Rust/password_checker/: .dockerignore  Dockerfile  THIRD-PARTY-LICENSES.md  pass_strong.rs  third_party_raw.txt
09-Rust/spectastic/: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
09-Rust/src/: lib.rs  main.rs
(+2827 files in other folders)
