[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "greymath"
version = "0.1.0"
description = "A Research-Grade Mathematical IDE for Building Intelligence Using PhD-Level Mathematics"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "sympy>=1.12",
    "mpmath>=1.3",
    "networkx>=3.2",
    "pydantic>=2.5",
    "fastapi>=0.109",
    "uvicorn>=0.27",
    "websockets>=12.0",
    "jsonrpcserver>=5.0",
    "hypothesis>=6.92",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "mypy>=1.8",
    "ruff>=0.2",
    "hypothesis>=6.92",
]
gpu = [
    "cupy>=12.0",
]
viz = [
    "plotly>=5.18",
    "matplotlib>=3.8",
]

[tool.setuptools.packages.find]
include = ["greymath*"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
