[metadata]
name = graph-plotter
version = 0.1.0
author = Robert-Marshall01
author_email = RobertCMarshall2007@outlook.com
description = Simple tkinter + matplotlib graph plotter with headless CLI
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Robert-Marshall01/GreyThink
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Scientific/Engineering
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords = plotting, matplotlib, tkinter, cli, hexbin, scatter

[project_urls]
Source = https://github.com/Robert-Marshall01/GreyThink
Tracker = https://github.com/Robert-Marshall01/GreyThink/issues

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.18,<2.0
    matplotlib>=3.0,<4.0

[options.entry_points]
console_scripts =
    graph-plotter = graph_plotter:main
