[package]
name = "grey-distributed"
version = "0.1.0"
edition = "2021"
authors = ["Grey Distributed Team"]
description = "A production-grade distributed systems platform"
license = "MIT OR Apache-2.0"
repository = "https://github.com/grey-distributed/grey"
keywords = ["distributed", "consensus", "raft", "scheduling", "storage"]
categories = ["asynchronous", "network-programming"]

[lib]
name = "grey_distributed"
path = "src/lib.rs"

# Note: Binary entry point is in Go (cmd/greyd/main.go)
# This Rust crate is library-only

[dependencies]
# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Synchronization primitives
parking_lot = "0.12"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }

# Random number generation
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time utilities
chrono = "0.4"

# Collections
dashmap = "5.5"
indexmap = "2.2"  # Pin to version compatible with rustc 1.75

# Metrics
prometheus = "0.13"

# Optional: Cryptography (commented out as we use placeholder implementations)
# ring = "0.17"
# rustls = "0.21"

[dev-dependencies]
# Testing
tokio-test = "0.4"
proptest = "1.4"
criterion = "0.5"

# Mock utilities
mockall = "0.12"

[features]
default = []

# Enable TEE support (Intel SGX, AMD SEV)
tee = []

# Enable chaos testing utilities
chaos = []

# Full observability with all exporters
observability-full = []

# Enable all optional features
full = ["tee", "chaos", "observability-full"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
lto = true
codegen-units = 1

# Benchmarks (uncomment when benches/ directory is created)
# [[bench]]
# name = "consensus"
# harness = false
#
# [[bench]]
# name = "scheduler"
# harness = false
#
# [[bench]]
# name = "storage"
# harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
