[package]
name = "spectastic"
version = "0.1.0"
edition = "2021"
description = "Minimal GUI system inspector showing CPU, memory, disks, network and hardware details."
readme = "README.md"
license = "MIT"
authors = ["Robert-Marshall01 <RobertCMarshall2007@outlook.com>"]
repository = "https://github.com/GreyThink"
homepage = "https://github.com/GreyThink"
documentation = "https://docs.rs/spectastic"
keywords = ["system", "sysinfo", "monitor", "gui", "egui"]
categories = ["command-line-utilities", "system-monitoring"]
exclude = ["Cargo.toml.orig"]

[dependencies]
eframe = "0.23"
sysinfo = "0.28"
num_cpus = "1.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
